# BCI-tests

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  Vagrantfile  conftest.py  duck  format.sh  pre-commit-full.sh  pre-commit.sh  pyproject.toml  reorder_imports.sh  setup.cfg  setup.py  test_all.py  test_base.py  test_bionic.py  test_build.py  test_dotnet.py  test_go.py  test_go115.py  test_go116.py  test_go_fleet.py  test_init.py  test_metadata.py  test_minimal.py  test_multistage.py  test_node.py  test_node15.py  test_openjdk-devel.py  test_openjdk.py  test_openjdk11.py  test_performance.py  test_python.py  test_repository.py  test_size.py  test_unit.py  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-rebase.yml  ci.yaml  command-dispatch.yml  container-scan.yaml  help-command.yml  rebase-command.yml  rebase-on-comment.yml  run_tests-command.yml  test.yaml
bci_tester/: cmds.py  data.py  fips.py  helpers.py  parse_data.py  runtime_choice.py  selinux.py  trigger_test.py  util.py
bci_tester/data/: containers.json
dockerfiles/: amidst  k3sup  maven  pdftk
dockerfiles/perftest-grafana/BCI/: Dockerfile
dockerfiles/perftest-grafana/SLE15/: Dockerfile
dockerfiles/perftest-grafana/UBI8-Standard/: Dockerfile
dockerfiles/perftest-kafka/UBI8-Standard/: Dockerfile
matryoshka_tester/: cmds.py  data.py  fips.py  helpers.py  parse_data.py  trigger_test.py
matryoshka_tester/data/: containers-2.json  containers.json
source/: conf.py  index.rst  setup.rst  testdoc.rst
tests/: test_389ds.py  test_ai.py  test_all.py  test_amd.py  test_base.py  test_bind.py  test_build.py  test_busybox.py  test_cosign.py  test_distribution.py  test_dotnet.py  test_fips.py  test_gcc.py  test_gemini.py  test_git.py  test_go.py  test_grafana.py  test_harbor.py  test_helm.py  test_init.py  test_kea.py  test_kernel_module.py  test_kiosk.py  test_kiwi.py  test_kubectl.py  test_mariadb.py  test_metadata.py  test_micro.py  test_minimal.py  test_multistage.py  test_nano.py  test_nginx.py  test_node.py  test_nvidia.py  test_openjdk.py  test_openjdk_devel.py  test_osc.py  test_pcp.py  test_php.py  test_postfix.py  (+13 more)
tests/files/: JCEProviderInfo.java  Tcheck.java  db.blocked  fips-test-gcrypt.c  fips-test-gnutls.c  fips-test.c  kea-dhcp4.conf  main.go  named.conf  nginx.conf  smb.conf
tests/files/harbor/core/: env
tests/files/harbor/exporter/: env
tests/files/harbor/jobservice/: config.yml  env
tests/files/harbor/nginx/: nginx.conf
tests/files/harbor/registry/: config.yml  passwd
tests/files/harbor/registryctl/: env
tests/files/harbor/secret/core/: private_key.pem
tests/files/harbor/secret/registry/: root.crt
tests/files/harbor/trivy-adapter/: env
tests/files/nginx/: nginx.conf
tests/files/spr/core/: app.conf  env
tests/files/spr/jobservice/: config.yml  env
tests/files/spr/portal/: nginx.conf
tests/files/spr/registry/: passwd
tests/files/spr/registryctl/: config.yml  env
tests/files/spr/secret/keys/: secretkey
tests/files/spr/trivy-adapter/: env
tests/files/stunnel/: server.crt  server.csr  server.key  server.pem
tests/trainers/: DOCUMENT.md  README.md  communication_examples.py  flask_hello_example.py  tensorflow_examples.py
tests/trainers/java/: Basic.java  MemoryTest.java  files_and_directories.java  garbage_collector.java  memory.java  subprocesses.java  system_env.java  system_exit.java  system_properties.java  threads_concurrency_and_sleep.java  time.java
