[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.0"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--strict-markers"
markers = [
    '389-ds_2.2',
    '389-ds_3.0',
    'bci-base_15.3',
    'bci-base_15.3-ltss',
    'bci-base_15.4',
    'bci-base_15.4-ltss',
    'bci-base_15.5',
    'bci-base_15.6',
    'bci-base_latest',
    'bci-base-fips_15.3',
    'bci-busybox_15.3',
    'bci-busybox_15.4',
    'bci-busybox_15.5',
    'bci-busybox_15.6',
    'bci-busybox_latest',
    'bci-init_15.3',
    'bci-init_15.4',
    'bci-init_15.5',
    'bci-init_15.6',
    'bci-init_latest',
    'bci-micro_15.3',
    'bci-micro_15.4',
    'bci-micro_15.5',
    'bci-micro_15.6',
    'bci-micro_latest',
    'bci-minimal_15.3',
    'bci-minimal_15.4',
    'bci-minimal_15.5',
    'bci-minimal_15.6',
    'bci-minimal_latest',
    'dotnet-aspnet_6.0',
    'dotnet-aspnet_8.0',
    'dotnet-runtime_6.0',
    'dotnet-runtime_8.0',
    'dotnet-sdk_6.0',
    'dotnet-sdk_8.0',
    'gcc_7',
    'gcc_13',
    'gcc_14',
    'git_2.35',
    'git_2.43',
    'git_latest',
    'helm_3.13',
    'helm_latest',
    'nginx_1.21',
    'nginx_latest',
    'golang_oldstable',
    'golang_oldstable-openssl',
    'golang_stable',
    'golang_stable-openssl',
    'golang_unstable',
    'mariadb_10.6',
    'mariadb_10.11',
    'mariadb_11.2',
    'mariadb-client_10.6',
    'mariadb-client_10.11',
    'mariadb-client_11.2',
    'nodejs_16',
    'nodejs_18',
    'nodejs_20',
    'openjdk_11',
    'openjdk_17',
    'openjdk_21',
    'openjdk-devel_11',
    'openjdk-devel_17',
    'openjdk-devel_21',
    'pcp_5',
    'pcp_6',
    'php_8',
    'php-apache_8',
    'php-fpm_8',
    'postgres_14',
    'postgres_15',
    'postgres_16',
    'python_3.10',
    'python_3.11',
    'python_3.12',
    'python_3.6',
    'registry_2.8',
    'ruby_2.5',
    'ruby_3.3',
    'rust_oldstable',
    'rust_stable',
    'tumbleweed_latest',
    'tomcat_9',
    'tomcat_10',
    'bci-sle15-kernel-module-devel_15.5',
    'bci-sle15-kernel-module-devel_15.6',
    'spack_0.21',
]

[tool.black]
line-length = 79
