[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.0"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--strict-markers"
markers = [
    '389-ds_2.2',
    '389-ds_3.1',
    'alertmanager_0.26',
    'alertmanager_0.27',
    'alertmanager_latest',
    'apache-tomcat_9-openjdk8',
    'apache-tomcat_9-openjdk11',
    'apache-tomcat_9-openjdk17',
    'apache-tomcat_9-openjdk21',
    'apache-tomcat_10.1-openjdk23',
    'apache-tomcat_10.1-openjdk11',
    'apache-tomcat_10.1-openjdk17',
    'apache-tomcat_10.1-openjdk21',
    'bci-base_15.3',
    'bci-base_15.3-ltss',
    'bci-base_15.4',
    'bci-base_15.4-ltss',
    'bci-base_15.5',
    'bci-base_15.5-ltss',
    'bci-base_15.6',
    'bci-base_15.7',
    'bci-base_16.0',
    'bci-base_latest',
    'bci-base-fips_15.3',
    'bci-base-fips_15.4',
    'bci-base-fips_15.5',
    'bci-base-fips_15.6',
    'bci-base-fips_15.7',
    'bci-base-fips_16.0',
    'bci-base-fips_latest',
    'bci-busybox_15.3',
    'bci-busybox_15.4',
    'bci-busybox_15.5',
    'bci-busybox_15.6',
    'bci-busybox_15.7',
    'bci-busybox_16.0',
    'bci-busybox_latest',
    'bci-init_15.3',
    'bci-init_15.4',
    'bci-init_15.5',
    'bci-init_15.6',
    'bci-init_15.7',
    'bci-init_16.0',
    'bci-init_latest',
    'bci-micro_15.3',
    'bci-micro_15.4',
    'bci-micro_15.5',
    'bci-micro_15.6',
    'bci-micro_15.7',
    'bci-micro_16.0',
    'bci-micro_latest',
    'bci-minimal_15.3',
    'bci-minimal_15.4',
    'bci-minimal_15.5',
    'bci-minimal_15.6',
    'bci-minimal_15.7',
    'bci-minimal_16.0',
    'bci-minimal_latest',
    'blackbox_exporter_0.24',
    'cosign_2.2',
    'cosign_2.4',
    'dotnet-aspnet_8.0',
    'dotnet-aspnet_9.0',
    'dotnet-runtime_8.0',
    'dotnet-runtime_9.0',
    'dotnet-sdk_8.0',
    'dotnet-sdk_9.0',
    'gcc_7',
    'gcc_13',
    'gcc_14',
    'git_2.35',
    'git_2.43',
    'git_latest',
    'helm_3',
    'helm_latest',
    'milvus_2.4',
    'nginx_1.21',
    'nginx_latest',
    'golang_oldstable',
    'golang_oldstable-openssl',
    'golang_stable',
    'golang_stable-openssl',
    'golang_unstable',
    'grafana_10',
    'grafana_11',
    'kea_2.6',
    'kiwi_9.24',
    'kiwi_10.1',
    'kiwi_latest',
    'kubectl_1.28',
    'kubectl_1.29',
    'kubectl_1.30',
    'kubectl_1.31',
    'kubectl_1.32',
    'mariadb_10.11',
    'mariadb_11.6',
    'mariadb-client_10.11',
    'mariadb-client_11.6',
    'nodejs_16',
    'nodejs_18',
    'nodejs_20',
    'nodejs_22',
    'openjdk_11',
    'openjdk_17',
    'openjdk_21',
    'openjdk_23',
    'openjdk-devel_11',
    'openjdk-devel_17',
    'openjdk-devel_21',
    'openjdk-devel_23',
    'ollama_0.5',
    'open-webui_0.3',
    'pcp_5',
    'pcp_6',
    'php_8',
    'php-apache_8',
    'php-fpm_8',
    'postfix_3.8',
    'postfix_3.9',
    'postgres_14',
    'postgres_15',
    'postgres_16',
    'postgres_17',
    'prometheus_2',
    'prometheus_3',
    'python_3.9',
    'python_3.11',
    'python_3.12',
    'python_3.13',
    'python_3.6',
    'pytorch_2.5',
    'registry_2.8',
    'ruby_2.5',
    'ruby_latest',
    'rust_oldstable',
    'rust_stable',
    'tumbleweed_latest',
    'bci-sle15-kernel-module-devel_15.5',
    'bci-sle15-kernel-module-devel_15.6',
    'bci-sle15-kernel-module-devel_15.7',
    'bci-sle16-kernel-module-devel_16.0',
    'spack_0.23',
    'stunnel_5',
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
]

line-length = 79
indent-width = 4

# Assume Python 3.7
# Ideally we'd be 3.6 but upstream has no support for 3.6
# https://github.com/astral-sh/ruff/issues/3826
target-version = "py37"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

ignore = [
    # too long lines
    "E501"
]

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true

[tool.pylint.main]
# Specify a score threshold under which the program will exit with error.
fail-under = 9.75

# Minimum Python version to use for version dependent checks. Will default to the
# version used to run pylint.
py-version = "3.6"

[tool.pylint."messages control"]
# Disable the message, report, category or checker with the given id(s). You can
# either give multiple identifiers separated by comma (,) or put this option
# multiple times (only on the command line, not in the configuration file where
# it should appear only once). You can also use "--disable=all" to disable
# everything first and then re-enable specific checks. For example, if you want
# to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
disable = ["raw-checker-failed", "bad-inline-option", "locally-disabled", "file-ignored", "suppressed-message", "useless-suppression", "deprecated-pragma", "use-implicit-booleaness-not-comparison-to-string", "use-implicit-booleaness-not-comparison-to-zero", "use-symbolic-message-instead", "line-too-long", "wrong-import-order", "ungrouped-imports"]
