[metadata]
name = matryoshka-tester

[options]
packages = matryoshka_tester
include_package_data = True

[options.entry_points]
console_scripts =
    m8s-list-containers = matryoshka_tester.cmds:list_containers
    m8a-fetch-all-containers = matryoshka_tester.cmds:fetch_all_containers
    m8a-fetch-language-containers = matryoshka_tester.cmds:fetch_language_containers
