[metadata]
name = bci-tester

[options]
packages = bci_tester
include_package_data = True

[options.entry_points]
console_scripts =
    bci-list-containers = bci_tester.cmds:list_containers
    bci-fetch-all-containers = bci_tester.cmds:fetch_all_containers
    bci-fetch-language-containers = bci_tester.cmds:fetch_language_containers
    bci-trigger-tests-from-mqtt = bci_tester.trigger_test:trigger_from_mqtt
